# Humr

./: .gitignore  ACCESSIBILITY_DESIGN_SPEC.md  CLAUDE.md  Cargo.toml  README.md  SECURITY.md  TECHNICAL_UX_REQUIREMENTS.md  UX_DESIGN_FRAMEWORK.md  UX_WIREFRAMES_DETAILED.md  sanity.md
docs/: DEVELOPER_GUIDE.md  USER_GUIDE.md
src/: app.rs  audio.rs  config.rs  discovery.rs  echo_cancellation.rs  error_recovery.rs  jitter_buffer.rs  lib.rs  lighthouse.rs  main.rs  monitoring.rs  network.rs  noise_suppression.rs  opus_codec.rs  platform.rs  realtime_audio.rs  security.rs  terminal_ui.rs  ui.rs
src/tests/: cross_platform_tests.rs  echo_cancellation_tests.rs  error_recovery_tests.rs  integration_tests.rs  jitter_buffer_tests.rs  lighthouse_tests.rs  mod.rs  noise_suppression_tests.rs  opus_codec_tests.rs  realtime_audio_tests.rs  security_tests.rs
