[package]
name = "humr"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
cpal = "0.15"
hound = "3.5"
anyhow = "1.0"
# Cryptographic dependencies for secure communication
ring = "0.17"
x25519-dalek = "2.0"
chacha20poly1305 = "0.10"
ed25519-dalek = "2.0"
sha2 = "0.10"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
